度分布图完结

--- a/src/graph/Console/index.module.css
+++ b/src/graph/Console/index.module.css
@@ -10,3 +10,13 @@
 .search {
     margin-bottom: 10px;
 }
+
+.title {
+    display: inline;
+}
+
+.switch {
+    display: inline;
+    float: right;
+    transform: translate(-10px, 7px);
+}
